# termojinal

./: .gitignore  Cargo.toml  Cargo.toml.new  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: release.yml
commands/clone-and-open/: command.toml  run.sh
commands/hello-world/: command.toml  run.sh
commands/kill-merged/: command.toml  run.sh
commands/run-agent/: command.toml  run.sh
commands/start-review/: command.toml  run.sh
commands/switch-worktree/: command.toml  run.sh
crates/jterm-claude/: Cargo.toml
crates/jterm-claude/src/: detector.rs  lib.rs  request.rs  rules.rs
crates/jterm-ipc/: Cargo.toml
crates/jterm-ipc/src/: client.rs  command_loader.rs  command_protocol.rs  command_runner.rs  command_signer.rs  keybinding.rs  lib.rs  protocol.rs  server.rs
crates/jterm-layout/: Cargo.toml
crates/jterm-layout/src/: lib.rs
crates/jterm-render/: Cargo.toml
crates/jterm-render/src/: atlas.rs  blur.wgsl  blur_renderer.rs  color_convert.rs  emoji_atlas.rs  lib.rs  renderer.rs  rounded_rect.wgsl  rounded_rect_renderer.rs  shader.wgsl
crates/jterm-session/: Cargo.toml
crates/jterm-session/src/: daemon.rs  hotkey.rs  lib.rs
crates/jterm-vt/: Cargo.toml
crates/jterm-vt/src/: cell.rs  grid.rs  lib.rs  scrollback.rs  term.rs
crates/termojinal-claude/: Cargo.toml
crates/termojinal-claude/src/: lib.rs  monitor.rs
crates/termojinal-ipc/: Cargo.toml
crates/termojinal-ipc/src/: app_protocol.rs  client.rs  command_loader.rs  command_protocol.rs  command_runner.rs  command_signer.rs  daemon_connection.rs  keybinding.rs  lib.rs  protocol.rs  server.rs
crates/termojinal-layout/: Cargo.toml
crates/termojinal-layout/src/: lib.rs  node.rs  tests.rs  tree.rs  types.rs
crates/termojinal-mcp/: Cargo.toml
crates/termojinal-mcp/src/: client.rs  main.rs  mcp_types.rs  tools.rs
crates/termojinal-pty/: Cargo.toml
crates/termojinal-pty/src/: lib.rs
crates/termojinal-render/: Cargo.toml
crates/termojinal-render/src/: atlas.rs  blur_renderer.rs  color_convert.rs  emoji_atlas.rs  image_render.rs  lib.rs  renderer.rs  rounded_rect_renderer.rs  shader.wgsl
crates/termojinal-render/src/atlas/: coretext.rs  font_loader.rs  mod.rs  procedural.rs  tests.rs
crates/termojinal-render/src/renderer/: pane.rs  types.rs
crates/termojinal-session/: Cargo.toml
crates/termojinal-session/src/: daemon.rs  hotkey.rs  lib.rs  persistence.rs
crates/termojinal-vt/: Cargo.toml
crates/termojinal-vt/src/: cell.rs  color.rs  grid.rs  image.rs  lib.rs  term.rs
crates/termojinal-vt/src/term/: mod.rs  modes.rs  snapshot.rs
docs/: command.md  configuration.md  features.md  progress_current.md  progress_diff.md  quick_start.md
docs/ja/: command.md  configuration.md  features.md  quick_start.md
hooks/: claude-code-notify.sh  claude-code-settings.example.json
resources/AppIcon.appiconset/: Contents.json
resources/themes/: catppuccin-latte.toml  catppuccin-mocha.toml
samples/: config.toml
sdk/: README.md  deno.json  io.ts  jterm.ts  mod.ts  test.ts  types.ts
src/: actions.rs  allow_flow.rs  appearance.rs  clipboard.rs  command_ui.rs  config.rs  context_menu.rs  daemon_client.rs  dir_tree.rs  input.rs  ipc.rs  macos.rs  main.rs  notification.rs  palette.rs  platform.rs  quick_terminal.rs  session_picker.rs  status.rs  types.rs  workspace.rs
src/platform/macos/: clipboard.rs
src/ui/: dashboard.rs  frame.rs  overlays.rs  search_bar.rs  sidebar.rs  tab_bar.rs
tests/: integration.rs
