[workspace]
members = [
    "crates/jterm-pty",
    "crates/jterm-vt",
    "crates/jterm-session",
    "crates/jterm-render",
    "crates/jterm-layout",
    "crates/jterm-ipc",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/tomokikuchi/jterm"

[package]
name = "jterm"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "jterm-dev"
path = "src/main.rs"

[dependencies]
jterm-pty = { path = "crates/jterm-pty" }
jterm-vt = { path = "crates/jterm-vt" }
jterm-session = { path = "crates/jterm-session" }
jterm-render = { path = "crates/jterm-render" }
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["signal", "term"] }
libc = "0.2"
vte = "0.13"
winit = "0.30"
pollster = "0.4"
