[workspace]
members = [
    "crates/termojinal-pty",
    "crates/termojinal-vt",
    "crates/termojinal-session",
    "crates/termojinal-render",
    "crates/termojinal-layout",
    "crates/termojinal-ipc",
    "crates/termojinal-claude",
    "crates/termojinal-mcp",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/KikuchiTomo/termojinal"

[package]
name = "termojinal"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "termojinal-dev"
path = "src/main.rs"

[[bin]]
name = "termojinal"
path = "src/main.rs"

[dependencies]
termojinal-pty = { path = "crates/termojinal-pty" }
termojinal-vt = { path = "crates/termojinal-vt" }
termojinal-session = { path = "crates/termojinal-session" }
termojinal-render = { path = "crates/termojinal-render" }
termojinal-layout = { path = "crates/termojinal-layout" }
termojinal-ipc = { path = "crates/termojinal-ipc" }
termojinal-claude = { path = "crates/termojinal-claude" }
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["signal", "term"] }
libc = "0.2"
vte = "0.13"
winit = "0.30"
wgpu = "24"
pollster = "0.4"
arboard = "3"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
gethostname = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
raw-window-handle = "0.6"
unicode-width = { version = "0.2", features = ["cjk"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
block2 = "0.5"
