[package]
name = "jterm-ipc"
version = "0.1.0"
edition.workspace = true
description = "Unix socket IPC and jt CLI for jterm"

[[bin]]
name = "jt"
path = "src/bin/jt.rs"

[dependencies]
jterm-session = { path = "../jterm-session" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
dirs = "6"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
