[package]
name = "termojinal-claude"
version = "0.6.2-beta"
edition.workspace = true
description = "Allow Flow engine for AI agent coordination in termojinal"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
log = "0.4"
dirs = "6"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
