[package]
name = "termojinal-mcp"
version = "0.1.0"
edition.workspace = true
description = "MCP server for controlling termojinal from AI tools"

[[bin]]
name = "termojinal-mcp"
path = "src/main.rs"

[dependencies]
termojinal-ipc = { path = "../termojinal-ipc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
