[package]
name = "termojinal-session"
version = "0.1.0"
edition.workspace = true
description = "Session management daemon for termojinal"

[[bin]]
name = "termojinald"
path = "src/bin/termojinald.rs"

[dependencies]
termojinal-pty = { path = "../termojinal-pty" }
termojinal-vt = { path = "../termojinal-vt" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
